<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/expenses_dest"
        android:enabled="true"
        android:icon="@drawable/ic_expenses"
        android:title="@string/menu_bottom_nav_expenses"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/incomes_dest"
        android:enabled="true"
        android:icon="@drawable/ic_entradas"
        android:title="@string/menu_bottom_nav_incomes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/plannings_dest"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_bottom_nav_plannings"
        app:showAsAction="ifRoom" />

</menu>