<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_theme_gradient"
    android:orientation="vertical"
    tools:context="br.com.myself.presentation.ui.home.HomeActivity"
    tools:ignore="ContentDescription,HardcodedText">


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignItems="center"
        app:flexDirection="column">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myself"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Title"
            android:textAlignment="center" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.ActionBar.Subtitle"
            android:layout_marginTop="48dp"
            android:text="@string/my_controls"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_finances"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="@dimen/button_home_controls_160"
            android:layout_height="@dimen/button_home_controls_160"
            android:text="@string/finances"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_light_onPrimary"
            app:cornerRadius="@dimen/button_home_controls_corner_radius_24"
            app:icon="@drawable/ic_expenses"
            app:iconGravity="textTop"
            app:iconPadding="@dimen/all_default_layout_offset_16"
            app:iconSize="@dimen/button_home_controls_icon_36"
            app:iconTint="@color/md_theme_light_onPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_neuro"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="@dimen/button_home_controls_160"
            android:layout_height="@dimen/button_home_controls_160"
            android:text="@string/neuro"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_light_onPrimary"
            app:cornerRadius="@dimen/button_home_controls_corner_radius_24"
            app:icon="@drawable/ic_brain"
            app:iconGravity="textTop"
            app:iconPadding="@dimen/all_default_layout_offset_16"
            app:iconSize="@dimen/button_home_controls_icon_36"
            app:iconTint="@color/md_theme_light_onPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_data_management"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="@dimen/button_home_controls_160"
            android:layout_height="@dimen/button_home_controls_160"
            android:text="@string/data"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/md_theme_light_onPrimary"
            app:cornerRadius="@dimen/button_home_controls_corner_radius_24"
            app:icon="@drawable/ic_cloud"
            app:iconGravity="textTop"
            app:iconPadding="@dimen/all_default_layout_offset_16"
            app:iconSize="@dimen/button_home_controls_icon_36"
            app:iconTint="@color/md_theme_light_onPrimary" />


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/develop_by"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/full_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold" />
    </com.google.android.flexbox.FlexboxLayout>

</androidx.core.widget.NestedScrollView>